# lfu-cache

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: rust.yml
benches/: scaling.rs
src/: iter.rs  lfu.rs  lib.rs  timed_lfu.rs
src/frequency_list/: freq_list.rs  frequencies.rs  into_iter.rs  iter.rs  mod.rs  node.rs
src/lfu/: detached.rs  detached_ref.rs  entry.rs  freq_list.rs  lfu_entry.rs  map.rs  mod.rs  node.rs  util.rs
src/lfu_map/: entry.rs  frequencies.rs  into_iter.rs  iter.rs  keys.rs  lookup_map.rs  lookup_table.rs  map.rs  mod.rs  peek_iter.rs  peek_values.rs
