[package]
name = "lfu-cache"
version = "0.1.0"
authors = ["Edward Shen <code@eddie.sh>"]
edition = "2018"
license = "MIT OR Apache-2.0"
include = ["src/lib.rs", "LICENSE-*", "README.md"]

[profile.release]
lto = true
codegen-units = 1

[dependencies]
hashbrown = "0.11"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "scaling"
harness = false
