[package]
name = "lfu_cache"
description = "A simple constant time LFU cache implementation"
version = "1.2.0"
authors = ["Edward Shen <code@eddie.sh>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/edward-shen/lfu-cache"
keywords = ["lfu", "cache", "least", "frequently", "used"]
categories = ["data-structures", "caching"]
include = ["src/*", "LICENSE-*", "README.md"]

[profile.release]
lto = true
codegen-units = 1

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "scaling"
path = "benches/scaling.rs"
harness = false
